--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <!-- navigation bar start -->
-        <nav class="navbar navbar-expand-lg">
+        <section>
+          <nav class="navbar navbar-expand-lg">
             <div class="container">
               <a class="navbar-brand fs-1 text fw-bold" href="#">mh-Developers</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,50 +43,222 @@
               </div>
             </div>
           </nav>
+        </section>
           <!-- navigation bar end -->
+
           <!-- carousel start -->
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <section class="mt-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner container">
+                <div class="carousel-item active">
+                  <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block padding-text">
+                    <h1>Get start developing with us</h1>
+                    <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
+                    <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block padding-text">
+                    <h1>Get start developing with us</h1>
+                    <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
+                    <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block padding-text">
+                    <h1>Get start developing with us</h1>
+                    <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
+                    <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <div class="carousel-inner container">
-              <div class="carousel-item active">
-                <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block padding-text">
-                  <h1>Get start developing with us</h1>
-                  <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
-                  <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block padding-text">
-                  <h1>Get start developing with us</h1>
-                  <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
-                  <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block padding-text">
-                  <h1>Get start developing with us</h1>
-                  <p>This course will help the students Learning developing properly. And after that they can developing website.</p>
-                  <button class="btn btn-outline-primary bg-primary text-white" type="submit">Get Started</button>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+          </section>
+          <!-- carousel part end -->
     </header>
+    <main>
+      <!-- course header -->
+      <section class="mt-5">
+          <div class="d-flex flex-column justify-content-center align-items-center">
+          <h1>Discover Our Popular Courses</h1>
+          <p>
+           <span>Lorem ipsum dolor sit, amet ghhgh hfhhf consectetur adipisicing elit. Culpa</span> <br>
+           <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, provident!</span>
+            </p>
+        </div>
+      </section>
+      <!-- course detail -->
+      <section class="container pt-5">
+        <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 gy-3">
+          <div class="d-flex border rounded-1 ">
+            <div>
+              <img class="h-100" src="images/course/course-1.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+          <div class="d-flex border rounded-1">
+            <div>
+              <img class="h-100" src="images/course/course-2.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+          <div class="d-flex border rounded-1">
+            <div>
+              <img class="h-100" src="images/course/course-3.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+          <div class="d-flex border rounded-1">
+            <div>
+              <img class="h-100" src="images/course/course-4.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+          <div class="d-flex border rounded-1">
+            <div>
+              <img class="h-100" src="images/course/course-5.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+          <div class="d-flex border rounded-1">
+            <div>
+              <img class="h-100" src="images/course/course-6.png" alt="">
+            </div>
+            <div class="p-4">
+              <h3>Fundamental Of UI/UX Design</h3>
+              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <footer class="text-info">price:20$</footer>
+            </div>
+          </div>
+      </section>
+      <section class="p-5 d-flex justify-content-center align-items-center">
+        <button type="button" class="btn btn-primary">See More Courses</button>
+      </section>
+      <!-- frequently questions part -->
+      <section class="w-50 ms-6">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+          <div>
+            <h1>Frequently Asked Questions</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+      <div>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                What is the difference between flexbox and grid?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                what's the difference between tailwind and bootstrap?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Tailwind offers predesigned widgets to build a site from scratch with fast UI development. Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.Nov 2, 2021
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                What is css box models?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                What is symentic tag?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        </div>
+      </section>
+      <!-- icon part -->
+      <section class="p-5 ">
+        
+        <div class="d-flex flex-column align-items-center ">
+          <h1>Trusted by over 800+ companies</h1>
+        <div class="d-flex">
+          <div>
+            <img src="images/company/company-1.png" alt="">
+          </div>
+          <div>
+            <img  src="images/company/company-2.png" alt="">
+          </div>
+          <div>
+            <img src="images/company/company-3.png" alt="">
+          </div>
+          <div>
+            <img src="images/company/company-4.png" alt="">
+          </div>
+          <div>
+            <img src="images/company/company-5.png" alt="">
+          </div>
+          <div>
+            <img src="images/company/company-6.png" alt="">
+          </div>
+        </div>
+        </div>
+       </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
