footer part added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>mh-developers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/687b212bcd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -106,7 +107,7 @@
       <!-- course detail -->
       <section class="container pt-5">
         <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 gy-3">
-          <div class="d-flex border rounded-1 ">
+          <div class="d-flex border rounded-1">
             <div>
               <img class="h-100" src="images/course/course-1.png" alt="">
             </div>
@@ -171,7 +172,7 @@
         <button type="button" class="btn btn-primary">See More Courses</button>
       </section>
       <!-- frequently questions part -->
-      <section class="w-50 ms-6">
+      <section class="text-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div>
             <h1>Frequently Asked Questions</h1>
@@ -258,6 +259,20 @@
         </div>
         </div>
        </section>
+       <!-- footer part -->
+       <footer>
+        <section  class="bg-dark text-center footer-height">
+          <h2 class="text-white pt-4">mh-developers</h2>
+        <p class="text-white">Office 41, satmatha, Bogura, 
+          Bangladesh</p>
+          <div class="">
+            <a class="text-white" href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="text-white" href=""><i class="fa-brands fa-twitter"></i></a>
+            <a class="text-white" href=""><i class="fa-brands fa-instagram"></i></a>
+            <a class="text-white" href=""><i class="fa-brands fa-whatsapp"></i></a>
+          </div>
+        </section>
+       </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
