--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header>
-        <!-- navigation bar start -->
         <section>
           <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -31,16 +30,38 @@
                     <a class="nav-link" href="#">Deals</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Succes</a>
+                    <a class="nav-link" href="#">Success</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"></a>
+                    <a class="nav-link" href="#">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Register</a>
                   </li>
                 </ul>
-                  <button class="btn btn-outline-primary" type="submit">Register</button> 
+                  <!-- Button trigger modal -->
+<button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Register
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        You have to submit join form
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
               </div>
             </div>
           </nav>
@@ -171,8 +192,22 @@
       <section class="p-5 d-flex justify-content-center align-items-center">
         <button type="button" class="btn btn-primary">See More Courses</button>
       </section>
+      <!-- join form -->
+      <section  class="container bg h-100 p-5">
+            <div class="d-flex justify-content-beetween">
+              <div>
+                <h4>Ready to join?</h4>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              </div>
+              <div class="">
+                <button class="bg-white text-primary p-1 rounded" type="button" class="btn btn-outline-primary border-0">Register Now</button>
+              </div>
+            </div>
+          
+        </div>
+      </section>
       <!-- frequently questions part -->
-      <section class="text-center">
+      <section class="container pt-5 text-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div>
             <h1>Frequently Asked Questions</h1>
