footer is linked

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Courses</a>
+                    <a class="nav-link" href="">Courses</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Deals</a>
@@ -120,11 +120,13 @@
           <div class="d-flex flex-column justify-content-center align-items-center">
           <h1>Discover Our Popular Courses</h1>
           <p>
-           <span>Lorem ipsum dolor sit, amet ghhgh hfhhf consectetur adipisicing elit. Culpa</span> <br>
-           <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, provident!</span>
+           <span>We make you a developer from beginner, it is a goal.</span> <br>
+           <span>Even if you are nothing, if you stick to it, something will happen.</span>
             </p>
         </div>
       </section>
+      <!-- course header end -->
+
       <!-- course detail -->
       <section class="container pt-5">
         <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 gy-3">
@@ -133,8 +135,8 @@
               <img class="h-100" src="images/course/course-1.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>Javascript for beginner</h3>
+              <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -143,8 +145,8 @@
               <img class="h-100" src="images/course/course-2.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>C programming for beginners</h3>
+              <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -153,8 +155,8 @@
               <img class="h-100" src="images/course/course-3.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>c++ for beginners</h3>
+              <p>It is a 6 months long course..</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -163,8 +165,8 @@
               <img class="h-100" src="images/course/course-4.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>python for beginners</h3>
+              <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -173,8 +175,8 @@
               <img class="h-100" src="images/course/course-5.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>Node js for beginners</h3>
+              <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -183,8 +185,8 @@
               <img class="h-100" src="images/course/course-6.png" alt="">
             </div>
             <div class="p-4">
-              <h3>Fundamental Of UI/UX Design</h3>
-              <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+              <h3>Html and Css for beginners</h3>
+              <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
@@ -192,6 +194,7 @@
       <section class="p-5 d-flex justify-content-center align-items-center">
         <button type="button" class="btn btn-primary">See More Courses</button>
       </section>
+      <!-- course detail end-->
       <!-- join form -->
       <section  class="container bg h-100 p-5">
             <div class="d-flex justify-content-beetween">
@@ -270,7 +273,7 @@
       <!-- icon part -->
       <section class="p-5 ">
         
-        <div class="d-flex flex-column align-items-center ">
+        <div class="d-flex flex-column align-items-center">
           <h1>Trusted by over 800+ companies</h1>
         <div class="d-flex">
           <div>
@@ -301,10 +304,10 @@
         <p class="text-white">Office 41, satmatha, Bogura, 
           Bangladesh</p>
           <div class="">
-            <a class="text-white" href=""><i class="fa-brands fa-facebook-f"></i></a>
-            <a class="text-white" href=""><i class="fa-brands fa-twitter"></i></a>
-            <a class="text-white" href=""><i class="fa-brands fa-instagram"></i></a>
-            <a class="text-white" href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a class="text-white" href="https://facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="text-white" href="https://www.google.com/search?gs_ssp=eJzj4tLP1TfIyDMsS05XYDRgdGDwYi8pzywpSS0CAFnOB00&q=twitter&rlz=1C1CHBF_enBD1012BD1012&oq=twi&aqs=chrome.2.69i57j0i67j46i67i131i199i433i465j0i67j0i67i131i433j69i60l3.7981j0j7&sourceid=chrome&ie=UTF-8"><i class="fa-brands fa-twitter"></i></a>
+            <a class="text-white" href="https://www.google.com/search?q=instagram+login&rlz=1C1CHBF_enBD1012BD1012&oq=ins&aqs=chrome.2.69i57j0i131i433i512l2j0i20i131i263i433i512j46i131i175i199i433i512j69i60l3.6253j0j9&sourceid=chrome&ie=UTF-8"><i class="fa-brands fa-instagram"></i></a>
+            <a class="text-white" href="https://www.google.com/search?q=whatsapp&rlz=1C1CHBF_enBD1012BD1012&oq=whatsapp&aqs=chrome.0.69i59j0i20i131i263i433i512l2j0i131i433i512l2j0i512j69i60l2.12967j0j9&sourceid=chrome&ie=UTF-8"><i class="fa-brands fa-whatsapp"></i></a>
           </div>
         </section>
        </footer>
