--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
       <!-- course detail -->
       <section class="container pt-5">
-        <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 gy-3">
-          <div class="d-flex border rounded-1">
-            <div>
+        <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 ">
+         <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
+           <div>
               <img class="h-100" src="images/course/course-1.png" alt="">
             </div>
             <div class="p-4">
@@ -139,8 +139,8 @@
               <p>It is a 6 months long course.</p>
               <footer class="text-info">price:20$</footer>
             </div>
-          </div>
-          <div class="d-flex border rounded-1">
+           </div>
+          <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
             <div>
               <img class="h-100" src="images/course/course-2.png" alt="">
             </div>
@@ -150,7 +150,7 @@
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
-          <div class="d-flex border rounded-1">
+          <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
             <div>
               <img class="h-100" src="images/course/course-3.png" alt="">
             </div>
@@ -160,7 +160,7 @@
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
-          <div class="d-flex border rounded-1">
+          <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
             <div>
               <img class="h-100" src="images/course/course-4.png" alt="">
             </div>
@@ -170,7 +170,7 @@
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
-          <div class="d-flex border rounded-1">
+          <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
             <div>
               <img class="h-100" src="images/course/course-5.png" alt="">
             </div>
@@ -180,7 +180,7 @@
               <footer class="text-info">price:20$</footer>
             </div>
           </div>
-          <div class="d-flex border rounded-1">
+          <div class="row row-cols-lg-2 row-cols-sm-1 border border-rounded g-2">
             <div>
               <img class="h-100" src="images/course/course-6.png" alt="">
             </div>
@@ -271,11 +271,11 @@
         </div>
       </section>
       <!-- icon part -->
-      <section class="p-5 ">
+      <section class="p-5">
         
-        <div class="d-flex flex-column align-items-center">
-          <h1>Trusted by over 800+ companies</h1>
-        <div class="d-flex">
+        <div class=" d-none d-lg-block ">
+          <h1 class="text-center p-5">Trusted by over 800+ companies</h1>
+        <div class="row row-cols-lg-6 ">
           <div>
             <img src="images/company/company-1.png" alt="">
           </div>
